# Voteapi

./: Cargo.toml
src/: Notes.md  config.rs  main.rs  routes.rs
src/db/: mod.rs
src/endpoints/: mod.rs
src/model/: mod.rs
